--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "cafetria",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Cafetria",
+    "email": "mpotulom28@gmail.com",
+    "url": "https://manelisim.pages.dev"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
