--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.2.1",
+    "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
