--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
     "next": "14.2.8",
     "react": "^18.3.1",
