--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
-    "next": "14.2.8",
+    "next": "^14.2.8",
     "react": "^18.3.1",
-    "react-dom": "^18"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^5.0.0"
   }
 }
