--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,36 @@
 {
-	"compilerOptions": {
-		"target": "es5", // Specify ECMAScript target version
-		"lib": ["dom", "dom.iterable", "esnext"], // Specify library files to be included
-		"allowJs": true, // Allow JavaScript files to be compiled
-		"skipLibCheck": true, // Skip type checking of declaration files
-		"strict": true, // Enable all strict type-checking options
-		"forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
-		"noEmit": true, // Do not emit outputs
-		"esModuleInterop": true, // Enable esModuleInterop
-		"module": "esnext", // Specify module code generation
-		"moduleResolution": "node", // Specify module resolution strategy
-		"resolveJsonModule": true, // Include modules imported with .json extension
-		"isolatedModules": true, // Ensure each file can be safely transpiled without relying on other imports
-		"jsx": "preserve", // Preserve JSX as-is (for Next.js)
-		"baseUrl": ".", // Base directory to resolve non-relative module names
-		"paths": {
-			"@/*": ["src/*"] // Path alias for cleaner imports
-		}
-	},
-	"include": [
-		"next-env.d.ts", // Include Next.js environment types
-		"**/*.ts", // Include all TypeScript files
-		"**/*.tsx" // Include all TypeScript JSX files
-	],
-	"exclude": [
-		"node_modules" // Exclude node_modules directory
-	]
+  "compilerOptions": {
+    "target": "es5", // Specify ECMAScript target version
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ], // Specify library files to be included
+    "allowJs": true, // Allow JavaScript files to be compiled
+    "skipLibCheck": true, // Skip type checking of declaration files
+    "strict": true, // Enable all strict type-checking options
+    "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
+    "noEmit": true, // Do not emit outputs
+    "esModuleInterop": true, // Enable esModuleInterop
+    "module": "esnext", // Specify module code generation
+    "moduleResolution": "node", // Specify module resolution strategy
+    "resolveJsonModule": true, // Include modules imported with .json extension
+    "isolatedModules": true, // Ensure each file can be safely transpiled without relying on other imports
+    "jsx": "preserve", // Preserve JSX as-is (for Next.js)
+    "baseUrl": ".", // Base directory to resolve non-relative module names
+    "paths": {
+      "@/*": [
+        "src/*"
+      ] // Path alias for cleaner imports
+    },
+    "incremental": true
+  },
+  "include": [
+    "next-env.d.ts", // Include Next.js environment types
+    "**/*.ts", // Include all TypeScript files
+    "**/*.tsx" // Include all TypeScript JSX files
+  ],
+  "exclude": [
+    "node_modules" // Exclude node_modules directory
+  ]
 }
