Add .deployment file and update .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"cSpell.words": ["appletiser", "Cafetria", "categ", "embla"]
+	"cSpell.words": ["appletiser", "Cafetria", "categ", "embla"],
+	"appService.zipIgnorePattern": ["node_modules{,/**}", ".vscode{,/**}"],
+	"appService.defaultWebAppToDeploy": "/subscriptions/e9f6bf45-aad2-404d-8c8a-0a61b5b1a84b/resourceGroups/Cafetria_group/providers/Microsoft.Web/sites/Cafetria",
+	"appService.deploySubpath": "."
 }
