--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
     "next": "^14.2.8",
+    "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "typescript": "^5.0.0"
