--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "next": "^14.2.8",
     "pg": "^8.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-icons": "^2.2.7",
     "typescript": "^5.0.0"
   }
 }
