--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.11.9",
     "next": "^14.2.8",
     "pg": "^8.13.0",
     "react": "^18.3.1",
