--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/breadcrumbs": "^2.0.13",
+    "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.11.9",
-    "next": "^14.2.8",
+    "next": "^14.2.15",
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
@@ -33,6 +37,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-icons": "^2.2.7",
     "autoprefixer": "^10.4.20",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.0.0"
