--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.15",
     "pg": "^8.13.0",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.0.0",
