--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
