--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["applepay", "embla", "noofitems", "signup"]
+	"cSpell.words": ["applepay", "embla", "NEXTAUTH", "noofitems", "signup"]
 }
