--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@vercel/analytics": "^1.3.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cafetria": "file:",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
     "next": "^14.2.15",
+    "next-auth": "^4.24.8",
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
@@ -32,6 +35,8 @@
     "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.10",
