--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -39,6 +41,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.0.0",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
