--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/paypal-server-sdk": "^0.6.0",
     "@paypal/react-paypal-js": "^8.7.0",
     "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cafetria": "file:",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.1",
+    "express": "^4.21.1",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
     "next": "^14.2.15",
