--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@paypal/paypal-server-sdk": "^0.6.0",
     "@paypal/react-paypal-js": "^8.7.0",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cafetria": "file:",
+    "chart.js": "^4.4.5",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.1",
     "express": "^4.21.1",
