Refactor cSpell.words in .vscode/settings.json and add emailjs-com to package.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-	"cSpell.words": ["applepay", "embla", "NEXTAUTH", "noofitems", "signup"]
+	"cSpell.words": [
+		"applepay",
+		"embla",
+		"gtag",
+		"NEXTAUTH",
+		"noofitems",
+		"paylater",
+		"signup",
+		"venmo"
+	]
 }
