--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/paypal-server-sdk": "^0.6.0",
     "@paypal/react-paypal-js": "^8.7.0",
+    "@sentry/nextjs": "^8.35.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
