--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
 	"cSpell.words": [
+		"algoliasearch",
 		"applepay",
 		"embla",
 		"gtag",
+		"instantsearch",
 		"NEXTAUTH",
 		"nextjs",
 		"noofitems",
