--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/client-search": "^5.12.0",
     "@nextui-org/breadcrumbs": "^2.0.13",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
@@ -24,6 +25,7 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "@sentry/nextjs": "^8.35.0",
     "@vercel/analytics": "^1.3.1",
+    "algoliasearch": "^5.12.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -35,6 +37,7 @@
     "embla-carousel-react": "^8.2.1",
     "express": "^4.21.1",
     "framer-motion": "^11.11.9",
+    "instantsearch.css": "^8.5.1",
     "js-cookie": "^3.0.5",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
@@ -42,6 +45,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
+    "react-instantsearch": "^7.13.6",
+    "react-instantsearch-router-nextjs": "^7.13.6",
     "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
