Add access token handling and JWT generation for secure API requests

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.2.1",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "framer-motion": "^11.11.9",
     "instantsearch.css": "^8.5.1",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
@@ -53,6 +55,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.0.0",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/pg": "^8.11.10",
